Fix issue with filter controls pushed too much to the right, toolbar changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -55,10 +55,20 @@
 .table > tbody > tr:first-child > th {
     border: none;
 }
-.mat-form-field {
-    width: 15%;
+
+.mat-form-field{
+    width: 100%;
+    font-size: 16px;
 }
 
 .pagination /deep/ .ngx-pagination .current {
     background: #69F;
+}
+
+.input-form-width {
+    width: 90px;
+}
+
+.input-form-width-less {
+    width: 70px;
 }
